test/sema/disallow-use-of-moved-param.delta
// RUN: %check_errors %not %delta -typecheck %s

struct T {}

void f(T t) {}

void g(T t) {
    f(t);
    var a = t; // CHECK: [[@LINE]]:13: error: use of moved value
}
